[gd_scene load_steps=4 format=3 uid="uid://dfelo3fg16xre"]

[ext_resource type="PackedScene" uid="uid://btn3uuev55mor" path="res://addons/HTNDomainManager/PluginSystem/Nodes/BaseNode/base_node.tscn" id="1_8ui1s"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/Nodes/DomainNode/DomainNode.gd" id="2_skx2y"]
[ext_resource type="Texture2D" uid="uid://dx6r3u0tv840m" path="res://addons/HTNDomainManager/PluginSystem/Icons/Warning.svg" id="3_10lhp"]

[node name="HTNDomainNode" instance=ExtResource("1_8ui1s")]
tooltip_text = "WARNING: Utilization of this node is very powerful.
However, I do not do checks for nested HTNDomainNodes within the selected domain.
Nesting multiple domains may lead to large planning stacks or even infinite recursion.
Use this with caution or keep a note/Comment Node nearby on if the loaded domain has any HTNDomainNodes. :D"
title = "Domain"
slot/0/left_enabled = true
slot/0/left_type = 2
slot/0/left_color = Color(0.27451, 0.509804, 0.196078, 1)
slot/0/right_enabled = true
slot/0/right_type = 2
slot/0/right_color = Color(0.27451, 0.509804, 0.196078, 1)
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("2_skx2y")

[node name="Input" parent="Connections" index="0"]
text = "Task"

[node name="Output" parent="Connections" index="2"]
text = "Task"

[node name="OptionContainer" type="HBoxContainer" parent="." index="2"]
layout_mode = 2

[node name="WarningSymbol" type="TextureRect" parent="OptionContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "WARNING: You've selected the same domain as the currently being edited domain.
Assuming all build rules are satisfied, when running the currently being edited domain within the HTN Planner Scene Node, 
it may cause an infinite loop while planning or running the plan due to an infinite recursion.
TLDR: This may cause a stack overflow due to recursion."
texture = ExtResource("3_10lhp")
expand_mode = 1
stretch_mode = 4

[node name="OptionButton" type="OptionButton" parent="OptionContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true

[connection signal="item_selected" from="OptionContainer/OptionButton" to="." method="_on_option_button_item_selected"]
